Load Google Fonts asynchronously to avoid the flash of invisible text

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -42,7 +42,7 @@ section {
   .section-subheading {
     margin-bottom: 75px;
     text-transform: none;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Droid Serif","Times New Roman",Times,serif;
     font-size: 16px;
     font-style: italic;
     font-weight: 400;
