--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -26,7 +26,7 @@
   }
 }
 .jumbotron-title {
-  font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Droid Serif","Times New Roman",Times,serif;
   font-size: 1.5em;
   font-style: italic;
   text-transform: none;
